--- a/app/src/main/res/layout/activity_edit_tweet.xml
+++ b/app/src/main/res/layout/activity_edit_tweet.xml
@@ -16,4 +16,14 @@
         android:id="@+id/textView"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Large Text"
+        android:id="@+id/MessageText"
+        android:layout_below="@+id/textView"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="144dp" />
 </RelativeLayout>
